2021-07-02-10:13 JDBC Over Commit

--- a/day18【JDBC】/src/jdbc.properties
+++ b/day18【JDBC】/src/jdbc.properties
@@ -1,4 +1,4 @@
 user=root
-password=root
+password=toor
 url=jdbc:mysql://localhost:3306/test?rewriteBatchedStatements=true
 driverClass=com.mysql.jdbc.Driver
